# buildme-car

./: Makefile  README.md  pyproject.toml
services/: buildmecar.service
src/buildmecar/: __init__.py  base_camera.py  camera_pi.py  car.py  main.py  test_motors.py
src/buildmecar/static/: style.css
src/buildmecar/templates/: index.html  index.jinja  index2.html
tests/: README.md  conftest.py  test_base_camera.py
