[project]
name = "buildmecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buildhat>=0.9.0",
    "flask>=3.1.2",
    "greenlet>=3.3.0",
    'picamera; platform_system == "Linux" and platform_machine == "armv7l"',
]

[tool.uv]
package = true

[project.scripts]
test_motors = "buildmecar.test_motors:main"
buildmecare = "buildmecar.main:main"

[dependency-groups]
dev = ["ruff>=0.14.11"]
test = ["pytest>=8.3.4", "pytest-timeout>=2.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
timeout = 10
